# I-language-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  SECURITY.md  __init__.py  __main__.py  arraysfile.il  dev-requirements.txt  doc-requirements.txt  example.il  example.ilang  lexer.py  lexersyntax.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.il  test.ilang  test2.ilang
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  auto-assign.yml  labeler.yml  mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: update.md
.github/workflows/: auto-assign.yml  bandit.yml  black.yml  codeql.yml  dependencies.yml  mypy.yml  package.yml  pylint.yml  pytest.yml  release.yml  requirements.yml  ruff.yml
Docs/: exit_codes.md
Main/: __init__.py  _ast.py  _errors.py  _types.py  ast.py  lexer.py  parser.py  types.py
Modules/: Console.ilang  Math.ilang  Random.ilang
Modules/_core/: Console.py  Math.py  Random.py  __init__.py
Tests/: test_console.py  test_lexer.py  test_math.py
ilanguage/: __init__.py  __main__.py  example.ilang  test.ilang
ilanguage/Docs/: exit_codes.md
ilanguage/Grammar/: base.ebnf
ilanguage/Main/: _ast.py  _errors.py  _types.py  grammar.py  iast.py  lexer.py  options.py  parser.py  shell.py
ilanguage/Modules/: Console.ilang  Math.ilang  Random.ilang
ilanguage/Modules/_core/: Console.py  Math.py  Random.py
ilanguage/Tests/: test_ast.py  test_lexer.py  test_math.py
ilanguage/Tools/: build.bat  build.sh  upload.bat  upload.sh
