[project]
name = "I-Language"
version = "0.0.8"
authors = [
    { name="ElBe-Plaq", email="elbe.dev.plaq@gmail.com" },
    { name="MasterOktagon" }
]
description = "The I programming language is a high level programming language written in pure python."
readme = ".github/README.md"
requires-python = ">=3.7"
keywords=[
    "i language",
    "programming-language",
    "language"
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Pytest",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing_extensions>=4.5.0"
]

[project.urls]
"Homepage" = "https://github.com/I-Language-Development/i-language"
"Bug Tracker" = "https://github.com/I-Language-Development/i-language/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "autopep8==2.0.2",
    "bandit==1.7.5",
    "black==23.3.0",
    "build==0.10.0",
    "pipreqs==0.4.11",
    "pylint_runner==0.6.0",
    "pylint-secure-coding-standard==1.4.1",
    "pytest==7.2.2",
    "pytest-cov==4.0.0",
    "pytest-picked==0.4.6",
    "pytest-pretty==1.1.1",
    "ruff==0.0.260",
    "twine==4.0.2",
]
docs = [
    "mkdocstrings[python]==0.20.0",
    "mkdocs-material==9.1.4",
    "mkdocs-section-index==0.3.5",
]

[tool.black]
line-lenghth = 100
target-version = ["py37", 'py38','py39','py310', "py311"]

[tool.pylint.main]
exit-zero = true
ignore-patterns = ['__init__.py']
load-plugins = ["pylint.extensions.mccabe", "pylint_secure_coding_standard"]
py-version = "3.7"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = ["C0103", "C8008"]

[tool.pytest.ini_options]
testpaths = [
    "ilanguage/Tests",
]

[tool.ruff]
line-length = 100
